--- a/style.css
+++ b/style.css
@@ -3,8 +3,15 @@
     box-sizing:border-box
 }
 
+body{
+    margin: 0;
+}
+
+/* -- Slider -- */
 #sliderContainer {
     height: 600px;
+    display: flex;
+    justify-content: center;
 }
 
 .slideElement{
@@ -12,11 +19,10 @@
     top: 0;
     visibility: hidden;
     opacity:0;
+    margin: 0;
 }
 .slideElement img{
-    max-width: 800px;
-    height: auto;
-    max-height: 500px;
+    height: 600px;
 }
 
 .visible{
@@ -38,11 +44,23 @@ figcaption {
     bottom: 0;
     text-align: center;
 }
-
+/* -- Map -- */
 #map{
     width: 700px;
     height: 700px;
 }
+
+
+/* -- Station Infos -- */
+/* -- Canvas  -- */
+
+.explanation {
+    color: grey;
+    font-style: italic;
+}
+
+/* -- Signature -- */
+/* -- Timer -- */
 
 .infosMap {
     display: flex;
