--- a/style.css
+++ b/style.css
@@ -1,30 +1,46 @@
+/* -- General -- */
 * {
     -webkit-box-sizing:border-box;
     box-sizing:border-box
 }
 
+html{
+    background: #f5f5f5;
+}
+
 body{
     margin: 0;
+    font-size: 16px;
+}
+
+/* -- buttons -- */
+#booking, #submit, #reset {
+    border: none;
+    padding: 8px;
+    background: #EFEFEF;
+    font-size: 1rem;
+}
+
+#booking:hover, #submit:hover, #reset:hover {
+    -webkit-box-shadow: 1px 1px 5px gray;
+     box-shadow: 1px 1px 5px gray;
 }
 
 /* -- Slider -- */
 #sliderContainer {
-    height: 600px;
-    display: flex;
-    justify-content: center;
+    height: 40vw;
 }
-
 .slideElement{
     position: absolute;
     top: 0;
     visibility: hidden;
     opacity:0;
     margin: 0;
+    width: 100%;
 }
 .slideElement img{
-    height: 600px;
+    width: 100%;
 }
-
 .visible{
     visibility: visible;
     -webkit-transition: opacity 1s linear;
@@ -34,69 +50,63 @@ body{
     top: 0;
     opacity:1
 }
-
 figcaption {
     position: absolute;
-    color: white;
-    font-size: 2rem;
-    background-color: rgba(0,0,0,0.5);
+    color: black;
+    font-size: 3rem;
+    background-color: rgba(250,250,250,0.7);
     width: 100%;
-    bottom: 0;
+    bottom: calc(50% - 1.5rem);
     text-align: center;
 }
+
 /* -- Map -- */
 #map{
-    width: 700px;
-    height: 700px;
+    width: 60vw;
+    height: 40vw;
 }
-
 
 /* -- Station Infos -- */
-/* -- Canvas  -- */
-
-.explanation {
-    color: grey;
-    font-style: italic;
-}
-
-/* -- Signature -- */
-/* -- Timer -- */
-
 .infosMap {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -ms-flex-pack: distribute;
     justify-content: space-around;
+    margin-bottom: 2rem
 }
-
 .infos{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
-
 #stationInfos {
     border: solid 1px #7c7c7c;
     padding: 2rem;
     width: 350px;
+    background: white;
 }
-
 .open{
     color : green;
 }
-
 .closed{
     color: red;
 }
-
 .noAvailableBikes{
     color: orangered;
 }
 
-.signed{
-    border: solid 1px;
-    margin-top: 20px;
-}
-
+/* -- Canvas  -- */
 .signature{
     display: none;
     position: absolute;
@@ -106,25 +116,101 @@ figcaption {
     padding: 2rem;
     border: solid 2px;
 }
-
+.explanation {
+    color: grey;
+    font-style: italic;
+}
 .canvas{
     border : solid 1px;
 }
-
 .alert{
     color: red;
 }
 
+/* -- Signature -- */
+.signed{
+    margin-top: 20px;
+    background: white;
+}
+.signed img{
+    -webkit-box-shadow:  1px 1px 10px #ccc;
+    box-shadow:  1px 1px 10px #ccc;
+}
+
+/* -- Timer -- */
 .timer{
     display: none;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.6rem;
 }
-
 #station{
     font-weight: bold;
 }
-
 #expired{
     display: none;
+}
+
+
+/*--Media Queries--*/
+@media all and (max-width: 1024px){
+    .signature{
+        left: 10%;
+    }
+}
+
+@media all and (max-width: 768px){
+    #sliderContainer{
+        height: 35vh;
+    }
+    
+    .slideElement{
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+    
+    figcaption {
+        position: relative;
+        color: white;
+        font-size: 1.5rem;
+        background-color: rgba(0,0,0,0.5);
+        width: 100%;
+        text-align: center;
+        padding: 0 15px;
+    }
+    
+    .infosMap {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+    
+    #map{
+        width: 90vw;
+        height: 60vw
+    }
+    
+    #stationName{
+        font-size: 1.2rem;
+    }
+    
+    .signature{
+        left: 0;
+        padding: 1rem
+    }
+    
+    #imgSignature img{
+        width: 80vmin;
+    }
+    
+    .timer {
+        font-size: 1.3rem;
+        padding: 0 20px;
+    }
+
 }
